--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-materialize": "^3.8.10",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "jquery": "3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
