--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
             - ./back/data/data.sql:/docker-entrypoint-initdb.d/data.sql
         environment: 
         - POSTGRES_PASSWORD=pg 
-    quizz-api:
+    quizz_api:
         build:
             context: ./back
         volumes: 
@@ -21,7 +21,7 @@ services:
             - PGPASSWORD=pg
             - PGPORT=5432
             - PORT=5000
-    quizz-app:
+    quizz_app:
         build:
             context: ./front
         volumes: 
