--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,12 @@
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-materialize": "^3.8.10",
+    "react-player": "2.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-player": "2.0.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
